--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');s
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 /* Reset basic styles */
 body, h1, h2, h3, p, ul, li, a, button, input, textarea {
@@ -15,10 +15,10 @@ body, h1, h2, h3, p, ul, li, a, button, input, textarea {
 :root {
   --background-color: #0f111f; /* White background */
   --text-color: #fff;       /* Dark gray text */
-  --primary-color: #4381C1;    /* Example primary color (blue) - change as needed */
+  --primary-color: #4c9ae7;    /* Example primary color (blue) - change as needed */
   --section-padding: 60px 8vw; /* Padding for sections */
-  --card-background: #f8f9fa;  /* Light gray for cards */
-  --border-color: #292d50;    /* Light border color */
+  --card-background: #0f111f;  /* Light gray for cards */
+  --border-color: #2e3157;    /* Light border color */
 }
 
 
@@ -109,7 +109,7 @@ h2::after {
     border-radius: 8px;
     padding: 20px;
     text-align: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
     transition: transform 0.2s ease-in-out;
 }
 
@@ -132,7 +132,7 @@ h2::after {
 
 .card p {
     font-size: 0.95rem;
-    color: #555;
+    color: #fff;
 }
 
 /* Placeholder for image grid */
