--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -15,7 +15,7 @@
     height: 100%;
   }
 
-  .hero-content-container {
+.hero-content-container {
     grid-column: 1 / 2; /* Assign to the first column */
     position: relative; /* Keep for z-index */
     z-index: 1; /* Ensure text is above canvas if needed */
@@ -25,9 +25,8 @@
     align-items: flex-start; /* Align text content to the left */
     padding: 0 20px;
     color: #fff;
-    pointer-events: none; /* Keep if needed */
+
     padding-left: 5%; /* Optional left padding */
-    height: 100%; /* Make the container fill the grid cell height */
 }
 
 .canvas-grid-placeholder {
@@ -46,11 +45,11 @@
 }
 
 .name-title {
-    font-family: 'Space Grotesk', sans-serif;
-    font-weight: 300;
-    font-size: clamp(3rem, 8vw, 5rem);
+    font-family: 'Manrope', sans-serif;
+    font-weight: 200;
+    font-size: clamp(4rem, 8vw, 6rem);
     color: #fff;
-    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    text-shadow: 1px 2px 5px rgba(0, 0, 0, 0.4);
     margin: 0;
 }
 
@@ -64,8 +63,41 @@
 .hero-content-wrapper {
     margin: 0 auto; 
     width: 100%;
-    display: grid; 
-    grid-template-columns: 1fr 1fr;
+    display: flex; 
     align-items: center;
-    height: 100%;
 }
+
+.span-bold {
+    font-weight: 600;
+}
+
+/* CSS */
+.hero-button {
+    display: inline-block;
+    outline: 0;
+    border: 0; 
+    cursor: pointer;
+    will-change: box-shadow,transform;
+    background: radial-gradient( 100% 100% at 100% 0%, #54b2ff 0%, #5468FF 100% );
+    box-shadow: 0px 2px 4px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px rgb(58 65 111 / 50%);
+    padding: 0 32px; 
+    border-radius: 10px;
+    color: #fff;
+    height: 48px;
+    font-size: 18px;
+    text-shadow: 0 1px 0 rgb(0 0 0 / 40%); 
+    transition: box-shadow 0.15s ease,transform 0.15s ease;
+}
+
+.hero-button:hover {
+    box-shadow: 0px 4px 8px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px #3c4fe0;
+    transform: translateY(-2px);
+}
+
+.hero-button:active {
+    box-shadow: inset 0px 3px 7px #3c4fe0;
+    transform: translateY(2px);
+}
+
+
+
