--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -45,7 +45,7 @@
 .name-title {
     font-family: 'Manrope', sans-serif;
     font-weight: 200;
-    font-size: clamp(4rem, 8vw, 6rem);
+    font-size: 6rem;
     color: #fff;
     text-shadow: 1px 2px 5px rgba(0, 0, 0, 0.4);
     margin: 0;
@@ -69,6 +69,11 @@
     font-weight: 600;
 }
 
+.button-container {
+    display: flex;
+    gap: 20px;
+}
+
 /* CSS */
 .hero-button {
     display: inline-block;
@@ -79,7 +84,7 @@
     background: radial-gradient( 100% 100% at 100% 0%, #54b2ff 0%, #5468FF 100% );
     box-shadow: 0px 2px 4px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px rgb(58 65 111 / 50%);
     padding: 0 32px; 
-    border-radius: 10px;
+    border-radius:30px;
     color: #fff;
     height: 48px;
     font-size: 18px;
@@ -99,3 +104,26 @@
 
 
 
+@media (max-width: 768px) {
+    .hero-content-wrapper {
+        justify-content: center;
+    }
+
+    .name-title {
+        font-size: 2.5rem;
+    }
+
+    .hero-subtitle {
+        margin-bottom: 10px;
+    }
+
+
+    .hero-content-container {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hero-section {
+        text-align: center;
+    }
+}
