button css update

--- a/src/index.css
+++ b/src/index.css
@@ -372,6 +372,13 @@ ul {
   padding: 10px !important;
 }
 
+button.crt-load-more {
+  border-radius: 50px;
+  border: none !important;
+  background-color: var(--primary-color) !important;
+  color: #fff;
+}
+
 @media (max-width: 768px) {
   section {
     padding: 30px 3vw;
